@@ -31,8 +31,11 @@ public class SaplingTile extends Tile {
 
 	public boolean tick(Level level, int x, int y) {
 		int age = level.getData(x, y) + 1;
-		if (age > 100) {
-			level.setTile(x, y, growsTo);
+		if (age > 110) {
+			// Don't grow if there is an entity on this tile.
+			if (!level.isEntityOnTile(x, y)) {
+				level.setTile(x, y, growsTo);
+			}
 		} else {
 			level.setData(x, y, age);
 		}
